--- a/index.html
+++ b/index.html
@@ -88,8 +88,13 @@
     </table>
   </section>
 
-  <section>
+   <section>
     <h2>Contact Us</h2>
+    <p>
+      You can also reach us via 
+      <a href="mailto:info@example.com">email</a> or 
+      <a href="tel:+11234567890">phone</a>.
+    </p>
     <form>
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
@@ -97,25 +102,9 @@
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required>
 
-        <label for="country-code">Country Code:</label>
-    <select id="country-code" name="country-code" required>
-      <option value="+1">+1 (USA)</option>
-      <option value="+91">+91 (India)</option>
-      <option value="+44">+44 (UK)</option>
-      <option value="+61">+61 (Australia)</option>
-      <option value="+81">+81 (Japan)</option>
-      <!-- Add more as needed -->
-    </select>
+      <label for="phone">Phone:</label>
+      <input type="tel" id="phone" name="phone" required>
 
-    <label for="phone">Phone Number:</label>
-    <input type="tel" id="phone" name="phone" 
-           pattern="[0-9]{7,12}" 
-           inputmode="numeric" 
-           maxlength="12" 
-           required 
-           placeholder="Enter number without country code">
-
-    <button type="submit">Submit</button>
       <button type="submit">Submit</button>
     </form>
   </section>
