--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     <h2>Contact Us</h2>
     <p>
       You can also reach us via 
-      <a href="mailto:info@example.com">email</a> or 
-      <a href="tel:+11234567890">phone</a>.
+      <a href="mailto:geetanshgoyal123@gmail.com">email</a> or 
+      <a href="tel:+918946827285">phone</a>.
     </p>
     <form>
       <label for="name">Name:</label>
@@ -112,8 +112,8 @@
   <footer>
     <p>
       Contact us at 
-      <a href="mailto:info@example.com">info@example.com</a> | 
-      Phone: <a href="tel:+11234567890">(123) 456-7890</a>
+      <a href="mailto:geetanshgoyal123@gmail.com">geetanshgoyal123@gmail.com</a> | 
+      Phone: <a href="tel:+918946827285">8946827285</a>
     </p>
   </footer>
 
